#1 Added toggle switch component

--- a/scss/components/_components.inputs.scss
+++ b/scss/components/_components.inputs.scss
@@ -165,6 +165,7 @@
 	height: 32px;
 	white-space: nowrap;
 	overflow: hidden;
+	box-shadow: $dropshadow--inset;
 	-webkit-appearance: none;
 	   -moz-appearance: none;
 	-webkit-user-select: none;
