--- a/style.scss
+++ b/style.scss
@@ -62,6 +62,7 @@
 @import "scss/components/components.modals";
 @import "scss/components/components.pagination";
 @import "scss/components/components.progress";
+@import "scss/components/components.switch";
 @import "scss/components/components.tables";
 
 
