--- a/style.css
+++ b/style.css
@@ -810,7 +810,7 @@ input[type="search"]::-webkit-search-results-decoration {
   width: 100%;
   height: 32px;
   padding: 0 0.5rem;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -908,6 +908,7 @@ input[type="search"]::-webkit-search-results-decoration {
   height: 32px;
   white-space: nowrap;
   overflow: hidden;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
   -webkit-appearance: none;
   -moz-appearance: none;
   -webkit-user-select: none;
@@ -1121,7 +1122,7 @@ input[type="search"]::-webkit-search-results-decoration {
   width: 100%;
   height: 14px;
   border-radius: 3px;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .c-progress__bar {
@@ -1174,6 +1175,52 @@ input[type="search"]::-webkit-search-results-decoration {
   to {
     background-position: 14px 0;
   }
+}
+
+.c-switch {
+  position: relative;
+  display: inline-block;
+}
+
+.c-switch__input:checked + .c-switch__slider {
+  background-color: #39c49f;
+}
+
+.c-switch__input:checked + .c-switch__slider:before {
+  -webkit-transform: translateX(12px);
+  -moz-transform: translateX(12px);
+  -ms-transform: translateX(12px);
+  -o-transform: translateX(12px);
+  transform: translateX(12px);
+}
+
+.c-switch__input:focus + .c-switch__slider {
+  box-shadow: inset 0 0 0 1px #fff, 0 0 0 2px #7342ab;
+}
+
+.c-switch__slider {
+  display: inline-block;
+  position: relative;
+  top: 3px;
+  cursor: pointer;
+  background-color: #bfbfbf;
+  width: 28px;
+  height: 16px;
+  margin-right: 4px;
+  border-radius: 8px;
+  transition: background-color 0.4s;
+}
+
+.c-switch__slider:before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  background-color: #fff;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  transition: transform 0.4s;
 }
 
 .c-table__column--sortable:hover {
@@ -1282,10 +1329,6 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .u-text-error {
   color: #e00 !important;
-}
-
-.u-text-success {
-  color: #080 !important;
 }
 
 .u-text-ko {
