--- a/scss/utilities/_utilities.positioning.scss
+++ b/scss/utilities/_utilities.positioning.scss
@@ -22,3 +22,16 @@
 	margin-left: auto !important;
 	margin-right: auto !important;
 }
+
+
+
+// ## Floats
+// -----------------------------------------------------------------------------
+
+.u-pull-left {
+	float: left !important;
+}
+
+.u-pull-right {
+	float: right !important;
+}
