--- a/style.scss
+++ b/style.scss
@@ -60,6 +60,7 @@
 @import "scss/components/components.dropdown";
 @import "scss/components/components.inputs";
 @import "scss/components/components.modals";
+@import "scss/components/components.navigation";
 @import "scss/components/components.pagination";
 @import "scss/components/components.progress";
 @import "scss/components/components.switch";
