--- a/scss/components/_components.dropdown.scss
+++ b/scss/components/_components.dropdown.scss
@@ -8,7 +8,6 @@
 	position: absolute;
 	top: 100%;
 	left: 0;
-	margin-top: 1px;
 	background-color: #fff;
 	border: 1px solid $color-border--light;
 	border-radius: $border-radius;
@@ -18,12 +17,12 @@
 
 	&.is-open {
 		display: block;
-		@include animation('fadeIn, slideInUp');
+		@include animation("fadeIn, slideInUp");
 	}
 
 	&.is-closing {
 		display: block;
-		@include animation('fadeOut, slideOutDown');
+		@include animation("fadeOut, slideOutDown");
 	}
 }
 
