--- a/scss/settings/_settings.variables.scss
+++ b/scss/settings/_settings.variables.scss
@@ -11,6 +11,7 @@ $grey:                              #bfbfbf; // 75%
 $grey-dark:                         #4d4d4d; // 30%
 
 $color-primary:                     #7342ab;
+$color-secondary:                   #00ffff;
 
 $color-text:                        #000;
 
@@ -43,8 +44,8 @@ $global-spacing-unit-large:         round($global-spacing-unit * 1.5);
 $global-spacing-unit-huge:          round($global-spacing-unit * 2);
 
 $font-size-h1:                      1.85rem;
-$font-size-h2:                      1.333333rem;
-$font-size-h3:                      1.1rem;
+$font-size-h2:                      1.4rem;
+$font-size-h3:                      1.15rem;
 $font-size-h4:                      1rem;
 $font-size-h5:                      0.9rem;
 $font-size-h6:                      0.85rem;
@@ -112,7 +113,7 @@ $z-index:                             1;
 $overlay:                           rgba(0, 0, 0, 0.5);
 $dropshadow:                        0 1px 5px rgba(0, 0, 0, 0.35);
 $dropshadow--light:                 0 1px 3px rgba(0, 0, 0, 0.15);
-$dropshadow--inset:                 inset 0 1px 2px rgba(0, 0, 0, 0.05);
+$dropshadow--inset:                 inset 0 1px 2px rgba(0, 0, 0, 0.15);
 
 
 
