--- a/style.css
+++ b/style.css
@@ -152,13 +152,13 @@ h1,
 
 h2,
 .c-h2 {
-  font-size: 1.33333rem;
+  font-size: 1.4rem;
   font-weight: 600;
 }
 
 h3,
 .c-h3 {
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   font-weight: 600;
 }
 
@@ -179,6 +179,8 @@ h6,
 .c-h6 {
   font-size: 0.85rem;
   font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
 }
 
 strong {
@@ -373,19 +375,27 @@ input[type="search"]::-webkit-search-results-decoration {
   appearance: none;
 }
 
-.o-container--tiny {
+.o-container--xxs {
+  width: 170px;
+}
+
+.o-container--xs {
   width: 250px;
 }
 
-.o-container--small {
-  width: 400px;
+.o-container--sm {
+  width: 350px;
 }
 
-.o-container--medium {
+.o-container--md {
+  max-width: 450px;
+}
+
+.o-container--lg {
   max-width: 600px;
 }
 
-.o-container--large {
+.o-container--xl {
   max-width: 900px;
 }
 
@@ -396,13 +406,13 @@ input[type="search"]::-webkit-search-results-decoration {
   -webkit-overflow-scrolling: touch;
 }
 
-.c-container--grey {
+.o-container--grey {
   background-color: #f2f2f2;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
 }
 
-.c-container--grey code {
+.o-container--grey code {
   background-color: transparent;
   border-radius: 0;
   border: 0;
@@ -723,7 +733,6 @@ input[type="search"]::-webkit-search-results-decoration {
   position: absolute;
   top: 100%;
   left: 0;
-  margin-top: 1px;
   background-color: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
@@ -810,7 +819,6 @@ input[type="search"]::-webkit-search-results-decoration {
   width: 100%;
   height: 32px;
   padding: 0 0.5rem;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -908,7 +916,6 @@ input[type="search"]::-webkit-search-results-decoration {
   height: 32px;
   white-space: nowrap;
   overflow: hidden;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
   -webkit-appearance: none;
   -moz-appearance: none;
   -webkit-user-select: none;
@@ -1069,6 +1076,69 @@ input[type="search"]::-webkit-search-results-decoration {
   padding: 0 0 4px;
 }
 
+.c-site-logo {
+  display: inline-block;
+  float: left;
+  margin-top: 8px;
+  margin-left: 8px;
+  margin-right: 24px;
+}
+
+.c-nav-bar {
+  background-color: #7342ab;
+}
+
+.c-nav-bar:after {
+  content: "" !important;
+  display: block !important;
+  clear: both !important;
+}
+
+.c-primary-nav-link {
+  color: #fff;
+  font-size: 13px;
+  text-decoration: none;
+  border-bottom: 3px solid transparent;
+  max-width: 175px;
+  height: 48px;
+  padding-top: 3px;
+  margin-left: 12px;
+  margin-right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: border 0.1s;
+}
+
+.c-primary-nav-link:hover,
+.c-primary-nav-link.is-open, .c-primary-nav-link.is-selected {
+  border-bottom-color: #00ffff;
+}
+
+.c-primary-nav-link:focus {
+  box-shadow: 0 0 0 2px #fff;
+}
+
+.c-primary-nav-link__icon {
+  position: relative;
+  top: -2px;
+}
+
+.c-link-list {
+  display: block;
+  position: relative;
+  text-decoration: none;
+  padding: 6px 12px;
+}
+
+.c-link-list:hover {
+  background-color: rgba(115, 66, 171, 0.07);
+}
+
+.c-link-list--separated {
+  border-top: 1px solid #e5e5e5;
+}
+
 .c-pagination__item {
   display: inline-block;
   color: #bfbfbf;
@@ -1122,7 +1192,7 @@ input[type="search"]::-webkit-search-results-decoration {
   width: 100%;
   height: 14px;
   border-radius: 3px;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
 .c-progress__bar {
@@ -1208,7 +1278,9 @@ input[type="search"]::-webkit-search-results-decoration {
   height: 16px;
   margin-right: 4px;
   border-radius: 8px;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
   transition: background-color 0.4s;
+  overflow: hidden;
 }
 
 .c-switch__slider:before {
@@ -1220,6 +1292,7 @@ input[type="search"]::-webkit-search-results-decoration {
   height: 14px;
   width: 14px;
   border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
   transition: transform 0.4s;
 }
 
@@ -1283,6 +1356,14 @@ input[type="search"]::-webkit-search-results-decoration {
   float: none !important;
   margin-left: auto !important;
   margin-right: auto !important;
+}
+
+.u-pull-left {
+  float: left !important;
+}
+
+.u-pull-right {
+  float: right !important;
 }
 
 .u-no-margin-bottom {
