--- a/scss/tools/_tools.media-queries.scss
+++ b/scss/tools/_tools.media-queries.scss
@@ -16,25 +16,25 @@
 }
 
 @mixin respond-to-tiny-only {
-	@media screen and (max-width: (map-get($breakpoints, small) - 1)) {
+	@media screen and (max-width: (map-get($breakpoints, sm) - 1)) {
 		@content;
 	}
 }
 
 @mixin respond-to-small-only {
-	@media screen and (min-width: map-get($breakpoints, small)) and (max-width: (map-get($breakpoints, medium) - 1)) {
+	@media screen and (min-width: map-get($breakpoints, sm)) and (max-width: (map-get($breakpoints, md) - 1)) {
 		@content;
 	}
 }
 
 @mixin respond-to-medium-only {
-	@media screen and (min-width: map-get($breakpoints, medium)) and (max-width: (map-get($breakpoints, large) - 1)) {
+	@media screen and (min-width: map-get($breakpoints, md)) and (max-width: (map-get($breakpoints, lg) - 1)) {
 		@content;
 	}
 }
 
 @mixin respond-to-large-only {
-	@media screen and (min-width: map-get($breakpoints, large)) {
+	@media screen and (min-width: map-get($breakpoints, lg)) {
 		@content;
 	}
 }
