--- a/style.scss
+++ b/style.scss
@@ -59,6 +59,7 @@
 @import "scss/components/components.buttons";
 @import "scss/components/components.dropdown";
 @import "scss/components/components.inputs";
+@import "scss/components/components.list-link";
 @import "scss/components/components.modals";
 @import "scss/components/components.navigation";
 @import "scss/components/components.pagination";
