#20 Added tooltip component

--- a/scss/settings/_settings.variables.scss
+++ b/scss/settings/_settings.variables.scss
@@ -102,6 +102,7 @@ $border-radius:                     3px;
 // -----------------------------------------------------------------------------
 
 $z-index-skip-link:                 900;
+$z-index-tooltip:                   600;
 $z-index-dropdown:                  500;
 $z-index-modal:                     300;
 $z-index-navigation:                100;
