--- a/scss/utilities/_utilities.positioning.scss
+++ b/scss/utilities/_utilities.positioning.scss
@@ -1,6 +1,17 @@
 // # Utilities: Positioning and Floats
 // -----------------------------------------------------------------------------
 
+
+
+// ## Displays
+// -----------------------------------------------------------------------------
+
+.u-inline-block {
+	display: inline-block !important;
+}
+
+
+
 // ## Positions
 // -----------------------------------------------------------------------------
 
