--- a/style.scss
+++ b/style.scss
@@ -66,6 +66,7 @@
 @import "scss/components/components.progress";
 @import "scss/components/components.switch";
 @import "scss/components/components.tables";
+@import "scss/components/components.tooltip";
 
 
 
