--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
 // Tools
 // -----------------------------------------------------------------------------
 
+@import "scss/tools/tools.button-bare";
 @import "scss/tools/tools.clearfix";
 @import "scss/tools/tools.media-queries";
 @import "scss/tools/tools.transforms";
